[package]
name = "shasum"
description = "Calculate SHA checksums for input file or directory."
repository = "https://github.com/smirnovvad/shasum"

keywords = ["hash", "sha", "crypto", "digest"]
categories = ["cryptography"]
license = "GPL-3.0"
version = "0.5.1"
authors = ["Vadim Smirnov <smirnovvad7@gmail.com>"]

[badges]
travis-ci = { repository = "smirnovvad/shasum", branch = "master" }
maintenance = { status = "as-is" }

[dependencies]
rust-crypto = "^0.2"
clap = "^2"
