[package]
name = "shasum"
description = "Calculate SHA checksums for input file or directory."
repository = "https://github.com/smirnovvad/shasum"

keywords = ["hash", "sha", "crypto", "digest"]
categories = ["cryptography"]
license = "GPL-3.0"
version = "0.6.1"
authors = ["Vadim Smirnov <smirnovvad7@gmail.com>"]

[badges]
travis-ci = { repository = "smirnovvad/shasum", branch = "master" }
maintenance = { status = "as-is" }

[dependencies]
clap = "^2"
sha2 = "0.8.0"
sha-1 = "0.8.0"
